converted to devcode

--- a/bezkoder-app/Dockerfile
+++ b/bezkoder-app/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14
 
-WORKDIR /bezkoder-app
+WORKDIR /devcode
 COPY package.json .
 RUN npm install
 COPY . .
-CMD npm start
+CMD [ "node", "server.js" ]
