--- a/bezkoder-app/package.json
+++ b/bezkoder-app/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.0.2",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "@hapi/joi": "^17.1.1",
+    "express-validator": "^6.14.2"
   }
 }
