--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-MYSQLDB_USER=root
-MYSQLDB_ROOT_PASSWORD=123456
-MYSQLDB_DATABASE=bezkoder_db
-MYSQLDB_LOCAL_PORT=3307
+MYSQL_HOST=localhost
+MYSQL_USER=tester
+MYSQL_PASSWORD=test123
+MYSQL_DBNAME=dandi_temmu
 MYSQLDB_DOCKER_PORT=3306
+MYSQLDB_LOCAL_PORT=3307
+MYSQLDB_ROOT_PASSWORD=devcode123
 
 NODE_LOCAL_PORT=6868
 NODE_DOCKER_PORT=8080
